# iced-libp2p-sample

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: app.rs  client.rs  handlers.rs  main.rs  p2p.rs  server.rs  widgets.rs
