[package]
name = "p2p-application-development-Bromles"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[dependencies]
tokio = { version = "1.43", features = ["full"] }
iced = { version = "0.13", features = ["tokio"] }
libp2p = { version = "0.55", features = ["tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "quic", "yamux"] }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"